kubernetes/apps/networking/networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-networking-policy
  namespace: networking
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
      - kube-apiserver
      - host
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
    - fromEndpoints:
        - matchLabels:
            gateway.networking.k8s.io/gateway-name: internal
            io.kubernetes.pod.namespace: envoy-gateway
  egress:
    - toEntities:
        - world
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - {}
